--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;400&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background-image: url(images/bg-intro-desktop.png);
+  background-color: hsl(0, 100%, 74%);
+  background-size: cover;
+  background-repeat: none;
+  font-family: 'Poppins';
+}
+
+main{
+  display: flex;  
+  justify-content: space-between;
+  margin: 50px 30px;
+}
+
+.left-content{
+  color: white;
+  margin-top: 14%;
+  margin-right: 30px; 
+  
+}
+
+.left-content > h1{
+  margin-left: 60px;
+  font-size: 45px;
+  margin-bottom: 0.5em;
+}
+
+.left-content > p{
+  font-size: 16px;
+  margin-left: 60px;
+  margin-right: 75px;
+  line-height: 25px;  
+}
+
+.right-content{
+  width: 85%;
+  margin-right: 60px;
+  margin-top: 50px;
+}
+
+.blue-button{
+  background-color: hsl(248, 32%, 49%);
+  width: 100%;
+  margin: 10px auto;
+  padding: 10px;
+  color: white;
+  border-radius: 7px;
+  border:none;
+  box-shadow: 1px 5px rgb(201, 120, 120);
+}
+
+.form-wrap{
+  margin-top: 5px;
+  padding: 2em;
+  background-color: white;
+  border-radius: 9px;
+  box-sizing: border-box;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input{
+  width: 100%;
+  height: 20px;
+  padding: 10px 5px;
+  margin-bottom: 10px;
+  margin-right: 5px;
+  border: 0.5px solid lightgray;
+  border-radius: 4px;
+  font-size: 12px;
+  font-weight: 600;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.form-wrap #free{
+  width: 100%;
+  padding: 10px 30px;
+  margin: 20px 0px;
+  text-align: center;
+  vertical-align: middle;
+  background-color: hsl(154, 59%, 51%);
   color: white;
+  font-size: 12px;
+  border-radius: 6px;
 }
 
-.App-link {
-  color: #61dafb;
+.form-wrap p{
+  font-size: 9px;
+  color:hsl(246, 25%, 77%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.terms{
+  text-decoration: none;
+  color:hsl(0, 100%, 74%);
+  font-weight: bolder;
+}
+
+
+/* Tablet view */
+
+@media only screen and (max-width:991px){
+  main{
+    display: block;
+    justify-content: center;
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  .right-content{
+    margin-top: 50px;
+    width: 100%;
   }
+  
+  .left-content {
+    color: white;
+    margin-top: 3%;
+  }
+
+  .left-content > p {
+    font-size: 16px;
+    line-height: 25px;
+    margin: 25px 5px auto;
+  }
+
+  .left-content > h1{
+    margin: 0px 20px;
+    font-size: 30px;
+
+}
+  
+  .blue-button{
+    padding: 20px;
+  }
+
+  .form-wrap #free{
+    padding: 15px 30px;
+  }
+
+
 }
